[package]
name = "hall_of_heros"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.11"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
num_enum = "0.5.4"
[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
